cobalt_cloud/check_error.txt
warning: virtual workspace defaulting to `resolver = "1"` despite one or more workspace members being on edition 2024 which implies `resolver = "3"`
  |
  = note: to keep the current resolver, specify `workspace.resolver = "1"` in the workspace root's manifest
  = note: to use the edition 2024 resolver, specify `workspace.resolver = "3"` in the workspace root's manifest
  = note: for more details see https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
warning: /Users/ibrahimhaji/code/cobaltdev/cobalt_backend/cloud/Cargo.toml: unused manifest key: dependencies.axum.version
warning: /Users/ibrahimhaji/code/cobaltdev/cobalt_backend/cloud/Cargo.toml: unused manifest key: dependencies.sqlx.version
warning: /Users/ibrahimhaji/code/cobaltdev/cobalt_backend/cloud/Cargo.toml: unused manifest key: dependencies.tokio.version
    Checking cobalt_cloud v0.1.0 (/Users/ibrahimhaji/code/cobaltdev/cobalt_cloud)
warning: unused import: `crate::hooks::use_auth`
 --> cobalt_cloud/src/hooks/use_files.rs:3:5
  |
3 | use crate::hooks::use_auth;   // if you have auth
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `hero::Hero`
 --> cobalt_cloud/src/components/mod.rs:6:9
  |
6 | pub use hero::Hero;
  |         ^^^^^^^^^^

warning: unused import: `echo::Echo`
 --> cobalt_cloud/src/components/mod.rs:9:9
  |
9 | pub use echo::Echo;
  |         ^^^^^^^^^^

error[E0308]: mismatched types
  --> cobalt_cloud/src/components/upload_dropzone.rs:18:16
   |
18 |         if let Some(file_engine) = evt.files() {
   |                ^^^^^^^^^^^^^^^^^   ----------- this expression has type `Vec<FileData>`
   |                |
   |                expected `Vec<FileData>`, found `Option<_>`
   |
   = note: expected struct `Vec<FileData>`
                found enum `std::option::Option<_>`

error[E0282]: type annotations needed
  --> cobalt_cloud/src/components/upload_dropzone.rs:23:30
   |
23 |                 let f_name = file_name.clone();
   |                              ^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
warning: `cobalt_cloud` (bin "cobalt_cloud") generated 3 warnings
error: could not compile `cobalt_cloud` (bin "cobalt_cloud") due to 2 previous errors; 3 warnings emitted
